fix: length added to built ins